client/src/components/currentData/Current.css
#currentOne{
    padding-left: 15%;
}

#cummulativeOne{
    padding-left: 10%;
}

